resolves #41 wrap div around table blocks in tabpanel to prevent blocks from overflowing bounds (PR #42)

--- a/data/css/tabs.css
+++ b/data/css/tabs.css
@@ -58,12 +58,6 @@
   padding: 1.25em;
 }
 
-.tabpanel > table.tableblock {
-  border-width: 0;
-  display: block;
-  overflow-x: auto;
-}
-
 .tablist > ul li,
 .tabpanel {
   border: 1px solid #dcdcdc;
@@ -82,8 +76,21 @@
   margin-top: 0;
 }
 
+/* #content is a signature of the Asciidoctor standalone HTML output */
 #content .tabpanel > :last-child,
 #content .tabpanel > :last-child > :last-child,
 #content .tabpanel > :last-child > :last-child > li:last-child > :last-child {
+  margin-bottom: 0;
+}
+
+.tablecontainer {
+  overflow-x: auto;
+}
+
+#content .tablecontainer {
+  margin-bottom: 1.25em;
+}
+
+#content .tablecontainer > table.tableblock {
   margin-bottom: 0;
 }
